<resources>
    <string name="app_name" translatable="false">Shizanger</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="registered">Already registered?</string>
    <string name="not_registered">Not registered yet?</string>
    <string name="username">Username</string>
    <string name="registration">Registration</string>
    <string name="log_out">Log out</string>
    <string name="add_contacts">Add contacts</string>
    <string name="type_here">Type here…</string>
    <string name="update_username">Update username</string>
    <string name="profile">Profile</string>
    <string name="contacts">Contacts</string>
    <string name="user_not_exists">User does not exists</string>
    <string name="wrong_password">Wrong password</string>
    <string name="empty_field">Field is empty</string>
    <string name="user_already_exists">User already exists</string>
    <string name="too_weak_password">Password is too weak</string>
    <string name="bad_email_format">Bad email format</string>
    <string name="change_locale">Change locale</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="choose_action">Choose action</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="remove_contact">Remove contact?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="reply">Reply</string>
    <string name="select_picture">Select picture</string>
    <string name="picture">🖼Picture</string>
    <string name="online">Online</string>
    <string name="last_seen">Last seen %1$s</string>
    <string name="last_seen_pattern">d.MM \'at\' HH:mm</string>
    <string name="seen_status">Seen status</string>
    <string name="typing">Typing…</string>
    <string name="me">Me</string>
    <string name="remove_profile_photo">Remove profile photo?</string>
    <string name="profile_image">Profile image</string>
</resources>