<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_nav"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/loginFragment"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.helow.messenger.fragment.RegisterFragment"
        android:label="@string/registration"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="email"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="password"
            app:argType="string"
            android:defaultValue="" />
        <action
            android:id="@+id/action_registerFragment_to_contactsFragment"
            app:destination="@id/contactsFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/my_nav"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:label="@string/login"
        android:name="com.helow.messenger.fragment.LoginFragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_contactsFragment"
            app:destination="@id/contactsFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/my_nav"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
        <argument
            android:name="email"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="password"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.helow.messenger.fragment.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts" >
        <action
            android:id="@+id/action_chatsFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/my_nav"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_contactsFragment_to_addContactsFragment"
            app:destination="@id/addContactsFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
        <action
            android:id="@+id/action_contactsFragment_to_chatFragment"
            app:destination="@id/chatFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" >
        </action>
        <action
            android:id="@+id/action_contactsFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"/>
    </fragment>

    <fragment
        android:id="@+id/addContactsFragment"
        android:name="com.helow.messenger.fragment.AddContactsFragment"
        android:label="@string/add_contacts"
        tools:layout="@layout/fragment_add_contacts" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.helow.messenger.fragment.ChatFragment"
        android:label=""
        tools:layout="@layout/fragment_chat">

        <argument
            android:name="uid"
            app:argType="string" />
        <argument
            android:name="messageFromShare"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"/>
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.helow.messenger.fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>